1.3 branch (unreleased)
=======================
(Jozsef Martin)
SF Patch #1173564 - add missing ContentType directive to some of the JSPs

(Richard Jones)
- Added new DSpace log file analysis tool, including command line analysis and
report generating tools and UI components for report display and navigation

(Richard Jones)
- "View Licence" link and copyright warning added to item display pages

(Richard Jones)
- SF patch #1149684 Group and Collection Admin bug fix. Can now change submitter
and collection admin group names (COLLECTION_XXX_SUBMITTER, COLLECTION_XXX_ADMIN)
and edit within the collection admin page

(Richard Jones)
- Addition of Tapir workspace to MyDSpace pages: authoring and supervising item
listings, a workspace for each item and a workspace item metadata viewer

(David Little)
- SF patch #1165647, 1165649-52 - USCD mods to support SRB and Registration

(Scott Yeadon)
- Updated handle.jar and associated license to 5.4.3

(Richard Jones)
- Addition of supervision order setting tools for administration area, to allow
user accounts to observe or collaborate on unfinished submission

(Robert Tansley)
- OAI-PMH set names now XML-encoded (e.g. &, <, >) (Collection names with such
characters previously caused bad XML in OAI-PMH ListSets responses)


1.2.2 beta 2
============

(Robert Tansley)
- Fixed bug whereby 'Submit to this Collection' button only appears if admin.

(Larry Stone)
- SF patch #1143570 Fix various bugs handling slash ("/") in bitstream names

(Scott Phillips & David Little)
- Patch for SF bug #1145527 Able to delete 'unknown' bitstream format

(Mike Simpson)
- Remove unneeded transaction isolation level code from browse system for PostgreSQL 8.0
  compatibility

(Scott Yeadon)
- SF bug #1123304 ItemImport --replace created new Handles

(Corey Harper)
- Retain search scope while navigating result sets
  SF patch #1156356

(Ben Bosman)
- Internal error no longer occurs when COLLECTION_ADMIN is editing collection template values